[gd_scene load_steps=2 format=3 uid="uid://y42rok8t4c4u"]

[ext_resource type="Script" uid="uid://cke3n0dj38cpw" path="res://GridMissions.gd" id="1_irmoo"]

[node name="GridPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_irmoo")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(600, 300)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 2
offset_right = 800.0
offset_bottom = 500.0
size_flags_vertical = 3

[node name="MissionContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1053.0
offset_top = 112.0
offset_right = 1098.0
offset_bottom = 143.0
text = "Back"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
